# VSCode-Docker-Cpp

./: CMakeLists.txt  Dockerfile  Dockerfile.win  README.md  compose.win.yml  compose.yml
applications/hello-world/: CMakeLists.txt  main.cpp
doc/: Doxyfile
greet/: CMakeLists.txt
greet/include/: Greet.hpp
greet/src/: Greet.cpp
greet/test/: CMakeLists.txt  test-Greet.cpp
